# industryhtml

./: .gitignore  README.md  branches_dataset.ipynb  pyproject.toml  utils.py  webstruct.ipynb
app/: clf_pipeline.py  dataset_pipeline.py  experiments.json  featurize.py  mf_text_run_experiments.sh  pos_follow_run_experiment.sh  pos_run_experiments.sh  run_experiments.sh  tmp_dataset_pipeline.py  utils.py
data/: cptesturls.txt  example.html  industries.csv  linkedin-industry-codes.json  testurls.txt  testurls_1000.txt  testurls_10000.txt  testurls_DE.txt
industryhtml/: clf_pipeline.py  dataset_pipeline.py  experiments.json  utils.py
literature/presentation/: html_part2.pptx
notebooks/: Untitled.ipynb  classify_industries.ipynb  classify_industries2.ipynb  corpus_insights.ipynb  dataset_insights.ipynb  evaluation.ipynb  html_informations_trash_treasure.ipynb  imprint-clustering.ipynb  leftover.ipynb  test.ipynb  test_featurize.ipynb
results/0_plain/: clfreport__0_plain_svm.csv  clfreport__0_plain_xgb_tree.csv  cm__0_plain_xgb_tree.csv
results/101_meta_only_elements/: clfreport__101_meta_only_elements_svm.csv  cm__101_meta_only_elements_svm.csv  fi__101_meta_only_elements_xgb_tree.csv
results/1_meta/: clfreport__1_meta_xgb_tree.csv  cm__1_meta_svm.csv  cm__1_meta_xgb_tree.csv
results/201_meta_headings_only_elements/: clfreport__201_meta_headings_only_elements_svm.csv  clfreport__201_meta_headings_only_elements_xgb_tree.csv  cm__201_meta_headings_only_elements_svm.csv  fi__201_meta_headings_only_elements_xgb_tree.csv
results/2_meta_headings/: clfreport__2_meta_headings_svm.csv  cm__2_meta_headings_svm.csv  cm__2_meta_headings_xgb_tree.csv
(+295 files in other folders)
