[project]
name = "industryhtml"
version = "0.1.1"
description = "Classification of industries by HTML webpages."
authors = [{ name = "Jan Paulus", email = "janpaulus95@web.de" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flair>=0.15.1",
    "langdetect>=1.0.9",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "syntok>=1.4.4",
    "xgboost>=3.2.0",
]

[project.urls]
Repository = "https://github.com/realjanpaulus/industryhtml"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5",
    "ruff>=0.11.4",
    "pytest>=7.4.3,<8",
]

[tool.uv]
default-groups = [
    "dev"
]

[tool.uv.sources]

[tool.hatch.build.targets.sdist]
include = []

[tool.hatch.build.targets.wheel]
packages = ["contactsqa"]

[tool.hatch.build.targets.wheel.sources]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]

[tool.ruff.per-file-ignores]
# module imported but unused
"__init__.py" = ["F401"]

[tool.ruff.format]
# use `\n` line endings
line-ending = "lf"

[tool.ruff.lint]
# explicitly enable pydocstyle (D) and isort (I)
select = ["D", "I"]
# D100: Missing docstring in public module
# D104: Missing docstring in public package
# D202: No blank lines allowed after function docstring
ignore = ["D100", "D104", "D202"]
# ignore tests
exclude = ["test_*.py"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--ignore=tests --ignore=old --import-mode=importlib"
